// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/group_settings/GroupSettings should match snapshot, while loading 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Groups"
      id="admin.groups.groupsPageTitle"
      values={Object {}}
    />
  </h3>
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <InjectIntl(FormattedMarkdownMessage)
        defaultMessage="Groups are a way to organize users and apply actions to all users within that group.
For more information on Groups, please see [documentation](!https://about.mattermost.com)."
        id="admin.groups.introBanner"
      />
    </div>
  </div>
  <AdminPanel
    footer={
      <div
        className="groups-list--footer"
      >
        <button
          className="btn btn-link prev"
        />
        <button
          className="btn btn-link next"
        />
      </div>
    }
    id="ldap_groups"
    subtitleDefaultMessage="Link and configure groups from your AD/LDAP to Mattermost. Please ensure you have configured a [group filter](#)."
    subtitleId="admin.groups.ldapGroupsDescription"
    titleDefaultMessage="AD/LDAP Groups"
    titleId="admin.groups.ldapGroupsTitle"
  >
    <GroupsList
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      groups={Array []}
      loading={true}
    />
  </AdminPanel>
</div>
`;

exports[`components/admin_console/group_settings/GroupSettings should match snapshot, with results 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Groups"
      id="admin.groups.groupsPageTitle"
      values={Object {}}
    />
  </h3>
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <InjectIntl(FormattedMarkdownMessage)
        defaultMessage="Groups are a way to organize users and apply actions to all users within that group.
For more information on Groups, please see [documentation](!https://about.mattermost.com)."
        id="admin.groups.introBanner"
      />
    </div>
  </div>
  <AdminPanel
    footer={
      <div
        className="groups-list--footer"
      >
        <button
          className="btn btn-link prev"
        />
        <button
          className="btn btn-link next"
        />
      </div>
    }
    id="ldap_groups"
    subtitleDefaultMessage="Link and configure groups from your AD/LDAP to Mattermost. Please ensure you have configured a [group filter](#)."
    subtitleId="admin.groups.ldapGroupsDescription"
    titleDefaultMessage="AD/LDAP Groups"
    titleId="admin.groups.ldapGroupsTitle"
  >
    <GroupsList
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      groups={
        Array [
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test1",
            "primary_key": "test1",
          },
          Object {
            "has_syncables": false,
            "mattermost_group_id": "group-id-1",
            "name": "test2",
            "primary_key": "test2",
          },
          Object {
            "has_syncables": true,
            "mattermost_group_id": "group-id-2",
            "name": "test3",
            "primary_key": "test3",
          },
        ]
      }
      loading={false}
    />
  </AdminPanel>
</div>
`;

exports[`components/admin_console/group_settings/GroupSettings should match snapshot, with results and next 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Groups"
      id="admin.groups.groupsPageTitle"
      values={Object {}}
    />
  </h3>
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <InjectIntl(FormattedMarkdownMessage)
        defaultMessage="Groups are a way to organize users and apply actions to all users within that group.
For more information on Groups, please see [documentation](!https://about.mattermost.com)."
        id="admin.groups.introBanner"
      />
    </div>
  </div>
  <AdminPanel
    footer={
      <div
        className="groups-list--footer"
      >
        <button
          className="btn btn-link prev"
        />
        <button
          className="btn btn-link next"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Next"
            id="filtered_user_list.next"
            values={Object {}}
          />
        </button>
      </div>
    }
    id="ldap_groups"
    subtitleDefaultMessage="Link and configure groups from your AD/LDAP to Mattermost. Please ensure you have configured a [group filter](#)."
    subtitleId="admin.groups.ldapGroupsDescription"
    titleDefaultMessage="AD/LDAP Groups"
    titleId="admin.groups.ldapGroupsTitle"
  >
    <GroupsList
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      groups={
        Array [
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test1",
            "primary_key": "test1",
          },
          Object {
            "has_syncables": false,
            "mattermost_group_id": "group-id-1",
            "name": "test2",
            "primary_key": "test2",
          },
          Object {
            "has_syncables": true,
            "mattermost_group_id": "group-id-2",
            "name": "test3",
            "primary_key": "test3",
          },
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test4",
            "primary_key": "test4",
          },
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test5",
            "primary_key": "test5",
          },
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test6",
            "primary_key": "test6",
          },
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test7",
            "primary_key": "test7",
          },
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test8",
            "primary_key": "test8",
          },
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test9",
            "primary_key": "test9",
          },
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test10",
            "primary_key": "test10",
          },
        ]
      }
      loading={false}
    />
  </AdminPanel>
</div>
`;

exports[`components/admin_console/group_settings/GroupSettings should match snapshot, with results and next and previous 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Groups"
      id="admin.groups.groupsPageTitle"
      values={Object {}}
    />
  </h3>
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <InjectIntl(FormattedMarkdownMessage)
        defaultMessage="Groups are a way to organize users and apply actions to all users within that group.
For more information on Groups, please see [documentation](!https://about.mattermost.com)."
        id="admin.groups.introBanner"
      />
    </div>
  </div>
  <AdminPanel
    footer={
      <div
        className="groups-list--footer"
      >
        <button
          className="btn btn-link prev"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Previous"
            id="filtered_user_list.prev"
            values={Object {}}
          />
        </button>
        <button
          className="btn btn-link next"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Next"
            id="filtered_user_list.next"
            values={Object {}}
          />
        </button>
      </div>
    }
    id="ldap_groups"
    subtitleDefaultMessage="Link and configure groups from your AD/LDAP to Mattermost. Please ensure you have configured a [group filter](#)."
    subtitleId="admin.groups.ldapGroupsDescription"
    titleDefaultMessage="AD/LDAP Groups"
    titleId="admin.groups.ldapGroupsTitle"
  >
    <GroupsList
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      groups={
        Array [
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test1",
            "primary_key": "test1",
          },
          Object {
            "has_syncables": false,
            "mattermost_group_id": "group-id-1",
            "name": "test2",
            "primary_key": "test2",
          },
          Object {
            "has_syncables": true,
            "mattermost_group_id": "group-id-2",
            "name": "test3",
            "primary_key": "test3",
          },
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test4",
            "primary_key": "test4",
          },
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test5",
            "primary_key": "test5",
          },
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test6",
            "primary_key": "test6",
          },
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test7",
            "primary_key": "test7",
          },
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test8",
            "primary_key": "test8",
          },
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test9",
            "primary_key": "test9",
          },
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test10",
            "primary_key": "test10",
          },
        ]
      }
      loading={false}
    />
  </AdminPanel>
</div>
`;

exports[`components/admin_console/group_settings/GroupSettings should match snapshot, with results and previous 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Groups"
      id="admin.groups.groupsPageTitle"
      values={Object {}}
    />
  </h3>
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <InjectIntl(FormattedMarkdownMessage)
        defaultMessage="Groups are a way to organize users and apply actions to all users within that group.
For more information on Groups, please see [documentation](!https://about.mattermost.com)."
        id="admin.groups.introBanner"
      />
    </div>
  </div>
  <AdminPanel
    footer={
      <div
        className="groups-list--footer"
      >
        <button
          className="btn btn-link prev"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Previous"
            id="filtered_user_list.prev"
            values={Object {}}
          />
        </button>
        <button
          className="btn btn-link next"
        />
      </div>
    }
    id="ldap_groups"
    subtitleDefaultMessage="Link and configure groups from your AD/LDAP to Mattermost. Please ensure you have configured a [group filter](#)."
    subtitleId="admin.groups.ldapGroupsDescription"
    titleDefaultMessage="AD/LDAP Groups"
    titleId="admin.groups.ldapGroupsTitle"
  >
    <GroupsList
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      groups={
        Array [
          Object {
            "has_syncables": null,
            "mattermost_group_id": null,
            "name": "test1",
            "primary_key": "test1",
          },
          Object {
            "has_syncables": false,
            "mattermost_group_id": "group-id-1",
            "name": "test2",
            "primary_key": "test2",
          },
          Object {
            "has_syncables": true,
            "mattermost_group_id": "group-id-2",
            "name": "test3",
            "primary_key": "test3",
          },
        ]
      }
      loading={false}
    />
  </AdminPanel>
</div>
`;

exports[`components/admin_console/group_settings/GroupSettings should match snapshot, without results 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Groups"
      id="admin.groups.groupsPageTitle"
      values={Object {}}
    />
  </h3>
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <InjectIntl(FormattedMarkdownMessage)
        defaultMessage="Groups are a way to organize users and apply actions to all users within that group.
For more information on Groups, please see [documentation](!https://about.mattermost.com)."
        id="admin.groups.introBanner"
      />
    </div>
  </div>
  <AdminPanel
    footer={
      <div
        className="groups-list--footer"
      >
        <button
          className="btn btn-link prev"
        />
        <button
          className="btn btn-link next"
        />
      </div>
    }
    id="ldap_groups"
    subtitleDefaultMessage="Link and configure groups from your AD/LDAP to Mattermost. Please ensure you have configured a [group filter](#)."
    subtitleId="admin.groups.ldapGroupsDescription"
    titleDefaultMessage="AD/LDAP Groups"
    titleId="admin.groups.ldapGroupsTitle"
  >
    <GroupsList
      actions={
        Object {
          "link": [MockFunction],
          "unlink": [MockFunction],
        }
      }
      groups={Array []}
      loading={false}
    />
  </AdminPanel>
</div>
`;
